[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xflow"
version = "0.1.0"
description = "A modular ML framework for training and evaluation tasks"
authors = [{ name = "Qiyuan Xu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["machine-learning", "tensorflow", "data-pipeline"]
dependencies = [
    "tensorflow==2.16.2",
    "keras==3.4.1",
    "numpy",
    "matplotlib",
    "opencv-python",
    "tqdm",
    "pydantic"
]

[project.optional-dependencies]
dev = ["mypy"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]